# election2024

./: README.md  candidate_recommender.py  others.json  partisan-office.json  pyproject.toml
src/election2024/: __init__.py
